<resources>
    <string name="app_name">TheCricketWay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Cricket Way</string>
    <string name="nav_header_subtitle">Best app for cricket</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_leagues">Leagues</string>
    <string name="menu_series">Matches</string>
    <string name="menu_rules">Rules</string>
    <string name="menu_structure">Stucture</string>
    <string name="menu_score">Score</string>
    <string name="menu_batting">Batting</string>
    <string name="menu_drills">Drills</string>
    <string name="menu_throwing">Throwing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>